fixed navigation to work and jump to designated sections

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -250,7 +250,7 @@ h2 {
 .soft-skills {
   position: absolute;
   display: inline-grid;
-  padding-left: 17%;
+  padding-left: 19%;
   margin-top: 8%;
 
 
@@ -331,5 +331,5 @@ h2 {
   position: absolute;
   color: grey;
   margin-top: 3%;
-  margin-left: 42%;
+  margin-left: 41%;
 }
